target_group.tf
resource "aws_lb_target_group" "main" {
  name     = "${local.name_prefix}-tg"
  port     = var.app_port
  protocol = "HTTP"
  vpc_id   = var.vpc_id
}


# resource "aws_lb_listener_rule" "main" {
#   listener_arn = var.private_listener_arn
#   priority     = var.lb_priority
#
#   action {
#     type             = "forward"
#     target_group_arn = aws_lb_target_group.main.arn
#   }
#
#   condition {
#     host_header {
#       values = ["${var.component}-${var.env}.learntechnology.cloud"]
#     }
#   }
# }
